2007-01-04 Vladimir Krasnov <vladimirk@mainsoft.com>

	* AnonymousIdentificationModule.cs: fixed OnEnter, fixed failure on
	incorrect cookie value that browser may hold

2006-12-27 Vladimir Krasnov <vladimirk@mainsoft.com>

	* FormsAuthentication.cs: added internal ReturnUrl property,
	GetRedirectUrl added usage of ReturnUrl

2006-12-12 Vladimir Krasnov <vladimirk@mainsoft.com>

	* FormsAuthentication.cs: TARGET_J2EE define for static members

2006-12-06 Vladimir Krasnov <vladimirk@mainsoft.com>

	* FormsAuthenticationModule.cs: fixed OnAuthenticateRequest, suppress
	exception on wrong ticket

2006-12-03 Igor Zelmanovich <igorz@mainsoft.com>

	* FormsAuthenticationModule.cs: 
	set SkipAuthorization=true for WebResource.axd

2006-11-27 Vladimir Krasnov <vladimirk@mainsoft.com>

	* SqlMembershipProvider.cs: typo bug

2006-11-21 Vladimir Krasnov <vladimirk@mainsoft.com>

	* SqlMembershipProvider.cs: fixed fixed exception type in GetPassword
	checks user lockout

2006-11-20 Igor Zelmanovich <igorz@mainsoft.com>

	* SqlMembershipProvider.cs: fixed: UpdateUser works properly.

2006-11-15 Igor Zelmanovich <igorz@mainsoft.com>

	* SqlMembershipProvider.cs: fixed: name is used for ReturnValue parameter.

2006-11-05 Vladimir Krasnov <vladimirk@mainsoft.com>

	* AnonymousIdentificationModule.cs: fixed anonymous id cookie

2006-11-05 Vladimir Krasnov <vladimirk@mainsoft.com>

	* MembershipProvider.cs, SqlMembershipProvider.cs:
	refactoring of DecryptPassword and EncryptPassword methods according
	to documentation

2006-09-10 Konstantin Triger <kostat@mainsoft.com>

	* SqlRoleProvider.cs: throw on empty connection string.

2006-09-26 Vladimir Krasnov <vladimirk@mainsoft.com>

	* Membership.cs: fixed GetAllUsers, typo bug
	* SqlRoleProvider.cs, SqlMembershipProvider.cs: refactored to use
	aspnetdb built in stored procedures,
	fixed application name and membership relation,
	improved exception handling

2006-09-03 Igor Zelmanovich <igorz@mainsoft.com>
