@@ -124,8 +124,8 @@ namespace System.Web.Security
 			byte [] decryptionKey;
 			byte [] iv = new byte [SALT_BYTES];
 
-			Array.Copy (password, 0, iv, 0, SALT_BYTES);
-			Array.Clear (password, 0, SALT_BYTES);
+			Array.Copy (password, 0, iv, 0, Math.Min(password.Length, SALT_BYTES));
+			Array.Clear (password, 0, password.Length);
 
 			using (SymmetricAlgorithm alg = GetAlg (out decryptionKey)) {
 				using (ICryptoTransform encryptor = alg.CreateEncryptor (decryptionKey, iv)) {
@@ -138,4 +138,5 @@ namespace System.Web.Security
 	}
 }
 #endif
+
 
